using UnityEngine;

namespace Slime
{
	public class IInputEventProvider : MonoBehaviour
	{
	
	}
}
